renovate the httpd webdav container
some sections of the WebDAV configuration are missing and included in the vhosts file, eventually they will be included in the image and it will allow seamless extension with .htaccess files or just directory sections

--- a/arm/docker-compose.armhf.yml
+++ b/arm/docker-compose.armhf.yml
@@ -161,7 +161,7 @@ services:
       - 8082:80
     restart: unless-stopped
     volumes:
-      - "${MOUNT}/httpd/conf/extra:/usr/local/apache2/conf/extra"
-      - "${MOUNT}/httpd/conf/httpd.conf:/usr/local/apache2/conf/httpd.conf"
+      # - "${MOUNT}/httpd/conf/extra:/usr/local/apache2/conf/extra"
+      # - "${MOUNT}/httpd/conf/httpd.conf:/usr/local/apache2/conf/httpd.conf"
       - "/mnt:/DAV:ro"
 version: '3.5'
